[project]
name = "riskmesh"
version = "0.1.0"
description = "An agent-to-agent exchange for machine-native micro-risk."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
